Fix indentation in CI workflow file

--- a/.github/workflows_stop/ci.yaml
+++ b/.github/workflows_stop/ci.yaml
@@ -26,5 +26,5 @@ jobs:
       - name: run pipeline
         env:
           CAPSTONE_TEST: ${{ secrets.MLOPS_TEST }}
-        run: |
+        run:
           dvc repro
