--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -29,6 +29,7 @@ jobs:
       - name: install dependencies
         run: |
           pip install -r requirements.txt
+          pip install dvc[s3]
 
       - name: run pipeline
         env:
