--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,14 +22,19 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
+          key: ${{ runner.os }}-pip-3.11-${{ hashFiles('requirements.txt') }}
           restore-keys: |
-            ${{ runner.os }}-pip-
+            ${{ runner.os }}-pip-3.11-
 
       - name: install dependencies
         run: |
           pip install --upgrade pip
-          grep -v pywin32 requirements.txt > requirements-ci.txt
+          python -c "
+          with open('requirements.txt') as f:
+              lines = [line.strip() for line in f if line.strip() and not line.startswith('pywin32')]
+          with open('requirements-ci.txt', 'w') as f:
+              f.write('\n'.join(lines))
+          "
           pip install -r requirements-ci.txt
           pip install dvc[s3]
 
@@ -38,4 +43,3 @@ jobs:
           CAPSTONE_TEST: ${{ secrets.MLOPS_TEST }}
         run: |
           dvc repro
-          
