--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -29,12 +29,7 @@ jobs:
       - name: install dependencies
         run: |
           pip install --upgrade pip
-          python -c "
-          with open('requirements.txt') as f:
-              lines = [line.strip() for line in f if line.strip() and not line.startswith('pywin32')]
-          with open('requirements-ci.txt', 'w') as f:
-              f.write('\n'.join(lines))
-          "
+          grep -v pywin32 requirements.txt > requirements-ci.txt
           pip install -r requirements-ci.txt
           pip install dvc[s3]
 
